--- a/setting.conf.sample
+++ b/setting.conf.sample
@@ -1,7 +1,9 @@
 ﻿[default]
 bot_token = 
 channel_id = 
+command_help = !help
 command_tier = !tier
 command_ship = !ship
 command_choice = !choice
 command_pickup = !pickup
+command_uranai = !ura
