customized for new function to support recruiting team members
分艦隊募集支援用の新規モジュールとカスタマイズした既存ファイル、及び簡易設定ガイドドキュメント

--- a/setting.conf.sample
+++ b/setting.conf.sample
@@ -2,13 +2,19 @@
 bot_token = 
 channel_id = 
 special_channel_id =
-command_help = !help
-command_tier = !tier
-command_ship = !ship
-command_choice = !choice
-command_pickup = !pickup
-command_team = !team
-command_luck = !luck
-command_kuji = !kuji
-command_enter = !enter
-command_leave = !leave
+command_prefix = !
+command_help = help
+command_tier = tier
+command_ship = ship
+command_choice = choice
+command_pickup = pickup
+command_team = team
+command_luck = luck
+command_kuji = kuji
+command_enter = enter
+command_leave = leave
+recruit_channel_id = 
+recruit_role_id = 
+command_recruit_open = ぶんぼ ぼしゅう 募集 分隊募集 分艦隊募集
+command_recruit_close = しめきり 締切 締め切り 〆切 〆
+command_recruit_regist = つうち 通知
